# ocr

./: README.md  main.py  pyproject.toml
fonts/arial/: arial.json
ocr/: character.py  detection.py  font.py  ocr.py  preprocess.py
